Re-issue expired worker tokens
